2-21-09: make ErrorDialog handle html formatting & styling so that clients can pass in any string
2-21-09: provide default title for ErrorDialog, since all current uses are "Error"
2-21-09: #1276, create PlainMessageDialog for replacing JOptionPanes that don't repaint
2-21-09: #1276, fix a bunch of dialogs by subclassing PaintImmediateDialog
2-19-09: #1236, -Ddeployment.scenario=ABC to force the deployment scenario to value ABC
2-19-09: #1236, add abstraction of phet installer version (PhetInstallerVersion)
2-19-09: #1236, get/set/test ask-me-later durations for sim and installer updates
2-19-09: #1236, "no update available" dialog hierarchy for sims and installer
2-19-09: #1236, rename PhetInfoQuery to VersionInfoQuery since (for now) it only deals with version info
2-19-09: #1236, replace notifiers with PhetInfoQuery
2-18-09: #1256, make the statistics details dialog resizable
2-18-09: #1255, make software agreement dialog resizeable
2-18-09: move all phetcommon URLs to PhetCommonConstants
2-18-09: delete IStatistics, pass SessionMessage instance instead of odd reference to PhetApplicationConfig
2-18-09: #1238, add dialog for recommending PhET installer update (not wired up)
2-18-09: #1238, add "Check for PhET installer update" button to Update preferences panel
2-18-09: #1236, rename many update dialog classes to indicate that they pertain to "sims" versus "installer"
2-17-09: #1257, fix help menu, wrong critieria for deciding whether to add "Check for updates" menu item
2-17-09: replace "jar-launcher.properties" with constant throughout 
2-17-09: replace "javaws.user.language" and "javaws.user.country" with constants throughout 
2-16-09: #1247, move statistics startup stuff to StatisticsManager.applicationStarted
2-13-09: #1232, abstraction of software agreement version and content
2-13-09: #877, session counts feature only enabled when statistics are enabled
2-12-08: #1231, change About>OK to About>Close